<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mylibrary.view.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_books"
        android:name="com.example.mylibrary.view.ui.books.UsersFragment"
        android:label="@string/title_books"
        tools:layout="@layout/fragment_users" />

    <fragment
        android:id="@+id/navigation_users"
        android:name="com.example.mylibrary.view.ui.users.NotificationsFragment"
        android:label="@string/title_users"
        tools:layout="@layout/fragment_books" />
</navigation>